Mon Jan 21 15:53:58 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/idl/HTemplate.txt:
          Doxygen and layout changes

Fri Jan 18 19:09:25 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * ChangeLog:
        * NEWS:
        * README:
        * docs/history/ChangeLog-3.4:

          Setup for next version.

Fri Jan 18 16:55:39 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * OpenDDS version 3.4 released.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: