@@ -1,3 +1,9 @@
+Mon Jan 21 16:19:32 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * dds/DCPS/Watchdog.h:
+        * dds/DCPS/WriteDataContainer.h:
+          Doxygen fixes
+
 Mon Jan 21 15:53:58 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * dds/idl/HTemplate.txt:
